--- a/policy.html
+++ b/policy.html
@@ -32,7 +32,7 @@
                     <div class="header__search col-xl-7">
                         <div class="header__search-input-wrap">
                             <input type="text" placeholder="Tìm kiếm sản phẩm..." class="header__search-input-field">
-                            <i class="ti-search header__search-input-icon"></i>
+                            <i class="fa-solid fa-magnifying-glass header__search-input-icon"></i>
                         </div>
                         <div class="header__search-contact-wrap">
                             <div class="header__search-contact-phone">
