--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <a href="" class="header__nav-item-link">Tuyển dụng</a>
                         </li> -->
                         <li class="header__nav-item">
-                            <a href="" class="header__nav-item-link">Liên hệ</a>
+                            <a href="./contact.html" class="header__nav-item-link">Liên hệ</a>
                         </li>
                     </ul>
                 </div>
