--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <div class="header__search col-xl-7">
                         <div class="header__search-input-wrap">
                             <input type="text" placeholder="Tìm kiếm sản phẩm..." class="header__search-input-field">
-                            <i class="ti-search header__search-input-icon"></i>
+                            <i class="fa-solid fa-magnifying-glass header__search-input-icon"></i>
                         </div>
                         <div class="header__search-contact-wrap">
                             <div class="header__search-contact-phone">
@@ -137,7 +137,8 @@
                                 <a href="" class="header__nav-item-link">Tuyển dụng</a>
                             </li> -->
                         <li class="header__nav-item">
-                            <a href="./contact.html" class="header__nav-item-link header__nav-item-link-active">Liên hệ</a>
+                            <a href="./contact.html" class="header__nav-item-link header__nav-item-link-active">Liên
+                                hệ</a>
                         </li>
                     </ul>
                 </div>
@@ -232,7 +233,102 @@
             </div>
         </div>
 
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="grid">
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="footer__title-menu">
+                            <span>MOBI SHOP</span>
+                        </div>
+                        <ul class="footer__list-info">
+                            <li class="footer__list-item">Copyright@ 2022 Mobi shop</li>
+                            <li class="footer__list-item">Chứng nhận ĐKKD 1111111111 do sở KH & ĐT TP.Đà Nẵng cấp</li>
+                            <li class="footer__list-item">Địa chỉ: Số 06, Thanh lương 9,Hòa Xuân,Cẩm Lệ,TP.Đà Nẵng</li>
+                            <li class="footer__list-item">Điện thoại: <a href="">0388 529 096</a> - Email: <a
+                                    href="">hand.22itb061@vku.udn.vn</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="footer__title-menu">
+                            <span>THEO DÕI CHÚNG TÔI</span>
+                        </div>
+                        <ul class="footer__list-page">
+                            <li class="footer__list-item">
+                                <a href="index.html">Trang chủ</a>
+                            </li>
+                            <li class="footer__list-item">
+                                <a href="">Sản phẩm</a>
+                            </li>
+                            <li class="footer__list-item">
+                                <a href="">Kiến thức & Phần mềm</a>
+                            </li>
+                            <li class="footer__list-item">
+                                <a href="policy.html">Chính sách bảo hành</a>
+                            </li>
+                            <li class="footer__list-item">
+                                <a href="">Liên hệ</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <div class="col-xl-5">
+                        <div class="footer__title-menu">
+                            <span>NHẬN TIN KHUYẾN MÃI</span>
+                        </div>
+                        <div class="footer__input-group">
+                            <input type="text" class="input__control" placeholder="Nhập email của bạn">
+                            <span class="input__control-btn-wrap">
+                                <button class="input__control-btn">Đăng Ký</button>
+                            </span>
+                        </div>
+
+                        <div class="footer__socials-group">
+                            <a href="" class="socials-button facebook">
+                                <i class="fab fa-facebook-f socials-icon facebook"></i>
+                            </a>
+                            <a href="" class="socials-button instagram">
+                                <i class="fab fa-instagram-square socials-icon instagram"></i>
+                            </a>
+                            <a href="" class="socials-button youtube">
+                                <i class="fa-brands fa-youtube socials-icon youtube"></i>
+                            </a>
+                            <a href="" class="socials-button twitter">
+                                <i class="fa-brands fa-twitter socials-icon twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__copyright">
+                    <div class="row">
+                        <div class="col-xl-6">
+                            <span class="copyright__author"> Bản quyền thuộc về <a class="copyright__author-link"
+                                    href="">Mobi Shop</a> Cung cấp bởi <a class="copyright__author-link" href="">VKU
+                                </a> </span>
+                        </div>
+                        <div class="col-xl-6">
+                            <ul class="footer__nav-list">
+                                <li class="footer__nav-item">
+                                    <a class="footer__nav-item--link" href="">Trang Chủ</a>
+                                </li>
+                                <li class="footer__nav-item">
+                                    <a class="footer__nav-item--link" href="">Sản phẩm</a>
+                                </li>
+                                <li class="footer__nav-item">
+                                    <a class="footer__nav-item--link" href="">Kiến thức & phần mềm</a>
+                                </li>
+                                <li class="footer__nav-item">
+                                    <a class="footer__nav-item--link" href="">Chính sách bảo vệ</a>
+                                </li>
+                                <li class="footer__nav-item">
+                                    <a class="footer__nav-item--link" href="">Liên hệ</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
 </body>
 
 </html>
