--- a/policy.html
+++ b/policy.html
@@ -236,11 +236,11 @@
                                 </p>
                                 <p>
                                     - Cụ thể với bàn phím cơ sẽ được bảo hành các lỗi phát sinh do nhà sản xuất mà
-                                    không phải do người dùng: Hỏng mạch, chết led, lỗi kết nối.
+                                    không phải do người dùng: Hỏng mạch, lỗi màn hình , lỗi cảm ứng , ... .
                                 </p>
                                 <p>
                                     - Các sản phẩm không sử dụng điện như Keycap, Switch, Keypuller, Swich Puller,
-                                    Lube Station... đều không bảo hành
+                                    Lube Station... đều không bảo hành .
                                 </p>
                             </div>
                         </div>
