--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                                 <a href="" class="header__nav-item-link">Giới thiệu</a>
                             </li> -->
                         <li class="header__nav-item">
-                            <a href="" class="header__nav-item-link">Sản Phẩm</a>
+                            <a href="product.html" class="header__nav-item-link">Sản Phẩm</a>
                             <i class="fa-solid fa-caret-down header__nav-item-icon"></i>
                         </li>
                         <li class="header__nav-item">
