completed product.html

--- a/product.html
+++ b/product.html
@@ -982,6 +982,29 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <ul class="page__num-list">
+                        <li class="page__num page__num--arow-not--active">
+                            <i class="fa-solid fa-angle-left "></i>
+                        </li>
+                        <li class="page__num page__num--active">
+                            <a class="page__num-link" href="">1</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">2</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">3</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">4</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">5</a>
+                        </li>
+                        <li class=" page__num"><i class="fa-solid fa-angle-right"></i></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <footer class="footer">
