--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </li> -->
                         <li class="header__nav-item">
                             <a href="product.html" class="header__nav-item-link">Sản Phẩm</a>
-                            <i class="fa-solid fa-caret-down header__nav-item-icon"></i>
+                            <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
                         </li>
                         <li class="header__nav-item">
                             <a href="" class="header__nav-item-link">Kiến thức & Phần mềm</a>
