--- a/product.html
+++ b/product.html
@@ -480,7 +480,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/GIW5.webp');"> </div>
+                                        style="background-image: url('./assets/img/GIW5.png');"> </div>
                                     <h4 class="list__category-item__name">Đồng hồ thông minh WIFI nghe gọi SIM 3G 4G có
                                         GPS Dual Camera - GIW5</h4>
                                     <div class="list__category-item__price">
@@ -518,7 +518,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/Smartwatch.webp');"> </div>
+                                        style="background-image: url('./assets/img/Smartwatch.png');"> </div>
                                     <h4 class="list__category-item__name">Đồng Hồ Thông Minh Smartwatch Mới Iwo Đồng Hồ
                                         Thông Minh D18 Chống Nước</h4>
                                     <div class="list__category-item__price">
@@ -556,7 +556,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/band6.webp');"> </div>
+                                        style="background-image: url('./assets/img/band6.png');"> </div>
                                     <h4 class="list__category-item__name">Đồng Hồ Đeo Tay Thông MInh Nhỏ Gọn, Đa Năng
                                         Xiaomi Mi Band 6</h4>
                                     <div class="list__category-item__price">
@@ -596,7 +596,7 @@
                             <div class="col-xl-10-2">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/vsp.webp');"> </div>
+                                        style="background-image: url('./assets/img/vsp.png');"> </div>
                                     <h4 class="list__category-item__name">Bộ máy tính để bàn Cấu hình cao ( Core i7 /
                                         2600/ Ram 8Gb / SSD 240GB ) và Màn hình VSP 22 inch</h4>
                                     <div class="list__category-item__price">
@@ -634,7 +634,7 @@
                             <div class="col-xl-10-2">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/gtx.webp');"> </div>
+                                        style="background-image: url('./assets/img/gtx.png');"> </div>
                                     <h4 class="list__category-item__name">MAX PC GAMING X7 CPU Core i7-2600 Ram 4GB SSD
                                         128GB GTX 750TI</h4>
                                     <div class="list__category-item__price">
@@ -672,7 +672,7 @@
                             <div class="col-xl-10-2">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/dell.webp');"> </div>
+                                        style="background-image: url('./assets/img/dell.png');"> </div>
                                     <h4 class="list__category-item__name">BỘ Máy Tính Đồng Bộ Dell CORE I5-4570/RAM 8GB
                                         /SSD 120GB/HDD 500GB và Màn hình Dell 21.5 inch</h4>
                                     <div class="list__category-item__price">
@@ -710,7 +710,7 @@
                             <div class="col-xl-10-2">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/vlimited.webp');"> </div>
+                                        style="background-image: url('./assets/img/vlimited.png');"> </div>
                                     <h4 class="list__category-item__name">Bộ máy tính để bàn Vlimited chơi game trọn độ
                                         đầy đủ Case/8G/SSD/HDD/Vga rời/Màn hình</h4>
                                     <div class="list__category-item__price">
@@ -748,7 +748,7 @@
                             <div class="col-xl-10-2">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/case.webp');"> </div>
+                                        style="background-image: url('./assets/img/case.png');"> </div>
                                     <h4 class="list__category-item__name">Case máy tính để bàn chơi game MAX PC CPU core
                                         i5 10400F, Ram 16GB,SSD M2 128GB, HDD 500GB Card 1050TI+</h4>
                                     <div class="list__category-item__price">
@@ -788,7 +788,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/inspiron.webp');"> </div>
+                                        style="background-image: url('./assets/img/inspiron.png');"> </div>
                                     <h4 class="list__category-item__name">Laptop Laptop Dell Inspiron 16 5620 i7
                                         1260P/16GB/512GB/2GB MX570/OfficeHS/Win11 (N6I7000W1)</h4>
                                     <div class="list__category-item__price">
@@ -827,7 +827,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/lenovo.webp');"> </div>
+                                        style="background-image: url('./assets/img/lenovo.png');"> </div>
                                     <h4 class="list__category-item__name">aptop Lenovo ThinkBook 14s Yoga ITL i5
                                         1135G7/16GB/512GB/14"F/Touch/Pen/Win11/(20WE007NVN)</h4>
                                     <div class="list__category-item__price">
@@ -865,7 +865,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/msi.webp');"> </div>
+                                        style="background-image: url('./assets/img/msi.png');"> </div>
                                     <h4 class="list__category-item__name">Laptop MSI Modern 15 B5M-023VN
                                         (R5-5625U/8GB/512GB SSD/AMD Radeon Graphics/ 15.6" Full HD/ Windows
                                         11/Black/Nhôm)</h4>
@@ -904,7 +904,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/vostro.webp');"> </div>
+                                        style="background-image: url('./assets/img/vostro.png');"> </div>
                                     <h4 class="list__category-item__name">Laptop Dell Vostro 3405 (V4R53500U003W) (R5
                                         3500U 8GB RAM/512GB SSD/14.0 inch FHD/Win10/Đen)</h4>
                                     <div class="list__category-item__price">
@@ -942,7 +942,7 @@
                             <div class="col-xl-10-2 ">
                                 <div class="list__category-item">
                                     <div class="list__category-item-img"
-                                        style="background-image: url('./assets/img/gia_do.webp');"> </div>
+                                        style="background-image: url('./assets/img/gia_do.png');"> </div>
                                     <h4 class="list__category-item__name">Giá đỡ laptop nhôm có thể gấp gọn dành cho
                                         Macbook Ipad Surface và máy tính xách tay</h4>
                                     <div class="list__category-item__price">
