--- a/product.html
+++ b/product.html
@@ -1029,7 +1029,7 @@
                                 <a href="index.html">Trang chủ</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Sản phẩm</a>
+                                <a href="product.html">Sản phẩm</a>
                             </li>
                             <li class="footer__list-item">
                                 <a href="">Kiến thức & Phần mềm</a>
@@ -1038,7 +1038,7 @@
                                 <a href="policy.html">Chính sách bảo hành</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Liên hệ</a>
+                                <a href="contact.html">Liên hệ</a>
                             </li>
 
                         </ul>
@@ -1080,19 +1080,19 @@
                         <div class="col-xl-6">
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Trang Chủ</a>
+                                    <a class="footer__nav-item--link" href="index.html">Trang Chủ</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Sản phẩm</a>
+                                    <a class="footer__nav-item--link" href="product.html">Sản phẩm</a>
                                 </li>
                                 <li class="footer__nav-item">
                                     <a class="footer__nav-item--link" href="">Kiến thức & phần mềm</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Chính sách bảo vệ</a>
+                                    <a class="footer__nav-item--link" href="policy.html">Chính sách bảo vệ</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Liên hệ</a>
+                                    <a class="footer__nav-item--link" href="index.html">Liên hệ</a>
                                 </li>
                             </ul>
                         </div>
