change href buynow

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             buy any product
                             <br> from our site to get a 25% discount
                         </p>
-                        <a class="buynow" href="#">Buy Now</a>
+                        <a class="buynow" href="product.html">Buy Now</a>
                         <ul class="social_icon">
                         </ul>
                     </div>
