hoan thanh - chua responsive web

--- a/knowlegde.html
+++ b/knowlegde.html
@@ -9,23 +9,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <title>MobiShop-Policy</title>
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <title>Document</title>
 </head>
 
 <body>
     <div class="root">
         <header class="header">
             <div class="grid">
-
                 <div class="row">
                     <div class="col-xl-3 header__logo-wrap">
-                        <a class="header__logo-link">
+                        <a href="index.html" class="header__logo-link">
                             <img src="./assets/img/new-logo.png" alt="" class="header__logo-img">
                         </a>
                     </div>
@@ -56,8 +55,7 @@
                                 <span class="header__cart-notice">0</span>
                                 <div class="header__cart-notice--cart">
                                     <img src="./assets/img/shopping-bag.png" alt="">
-                                    <p class="header__cart-notice-des">Không có sản phẩm nào trong giỏ hàng của bạn
-                                    </p>
+                                    <p class="header__cart-notice-des">Không có sản phẩm nào trong giỏ hàng của bạn</p>
                                 </div>
                             </div>
                         </div>
@@ -118,25 +116,26 @@
                     </div>
                     <ul class="header__nav-list">
                         <li class="header__nav-item">
-                            <a href="index.html" class="header__nav-item-link">Trang chủ</a>
+                            <a href="index.html" class="header__nav-item-link">Trang
+                                chủ</a>
                         </li>
                         <!-- <li class="header__nav-item">
-                                <a href="" class="header__nav-item-link">Giới thiệu</a>
-                            </li> -->
+                            <a href="" class="header__nav-item-link">Giới thiệu</a>
+                        </li> -->
                         <li class="header__nav-item">
                             <a href="product.html" class="header__nav-item-link">Sản Phẩm</a>
                             <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
                         </li>
                         <li class="header__nav-item">
-                            <a href="knowlegde.html" class="header__nav-item-link">Kiến thức & Phần mềm</a>
+                            <a href="knowlegde.html" class="header__nav-item-link header__nav-item-link-active">Kiến
+                                thức & Phần mềm</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="policy.html" class="header__nav-item-link header__nav-item-link-active">Chính
-                                sách bảo hành</a>
+                            <a href="policy.html" class="header__nav-item-link">Chính sách bảo hành</a>
                         </li>
                         <!-- <li class="header__nav-item">
-                                <a href="" class="header__nav-item-link">Tuyển dụng</a>
-                            </li> -->
+                            <a href="" class="header__nav-item-link">Tuyển dụng</a>
+                        </li> -->
                         <li class="header__nav-item">
                             <a href="contact.html" class="header__nav-item-link">Liên hệ</a>
                         </li>
@@ -145,109 +144,103 @@
 
             </div>
         </nav>
-        <div class="grid">
-            <div class="policy__header">
-                <div class="policy__header-container">
-                    <div class="policy__header-row row">
-                        <ul class="policy__header-list">
-                            <li class="policy__header-home">
-                                <a href="index.html">
-                                    <span>Trang chủ</span>
-                                </a>
-                            </li>
-                            <span class="policy__header-slash">&nbsp;/&nbsp;</span>
-                            <li class="policy__header-name">
-                                <strong>
-                                    <span>Chính sách bảo mật</span>
-                                </strong>
-                            </li>
-                        </ul>
-                    </div>
+        <div class="content">
+            <div class="grid">
+                <div class="row">
+                    <span class="page__link">
+                        <a href="index.html" class="page__link-home">Trang chủ</a>
+                        <span>/</span>
+                        <span class="all-product">Kiến thức & Phần mềm</span>
+                    </span>
                 </div>
-                <div class="policy__page">
-                    <div class="policy__page-container">
-                        <div class="policy__page-row">
-                            <div class="policy__page-title">
-                                <h1 class="policy__page-heading">CHÍNH SÁCH BẢO HÀNH</h1>
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="post__list-heading">
+                            <div class="post__list-title">
+                                <a href="" class="post__list-title-link">Bài viết xem nhiều</a>
                             </div>
-                            <div class="policy__page-content">
-                                <p>
-                                    <strong>A. Địa điểm bảo hành:</strong>
-                                </p>
-                                <p>
-                                    - Toàn bộ sản phẩm được phân phối và bán lẻ bởi MobiShop đều được bảo hành tại
-                                    địa chỉ của chúng tôi
-                                </p>
-                                <p>- Đối với những đơn hàng mua hàng từ xa, quý khách vui lòng gọi điện, nhắn tin
-                                    qua Fanpage, Shopee, Lazada, Zalo để được chúng tôi hỗ trợ xác định tình trạng
-                                    sản phẩm
-                                </p>
-                                <p>
-                                    - Với các trường hợp bảo hành từ xa, quy trình bảo hành thực hiện như sau:
-                                </p>
-                                <p>
-                                    + Quý khách vui lòng đóng gói kỹ sản phẩm để đảm bảo an toàn khi vận chuyển
-                                    hàng. MobiShop sẽ không chịu trách nhiệm khi có các lỗi phát sinh do quá trình
-                                    vận chuyển.
-                                </p>
-                                <p>
-                                    + Bên ngoài kiện hàng vui lòng ghi Tên, SĐT và Địa chỉ của quý khách để shop
-                                    tiện liên lạc và gửi hàng lại.
-                                </p>
-                                <p>
-                                    - Gửi sản phẩm về địa chỉ của chúng tôi. Chi phí chuyển phát chiều gửi đi quý
-                                    khách vui lòng tự thanh toán.
-                                </p>
-                                <p>
-                                    - Sau khi bảo hành xong, chúng tôi sẽ liên hệ gửi lại sản phẩm về địa chỉ mà quý
-                                    khách cung cấp. Chi phí vận chuyển chiều gửi lại do MobiShop thanh toán
-                                </p>
-                                <p>
-                                    <strong>B. Những trường hợp sau không được bảo hành:</strong>
-                                </p>
-                                <p>
-                                    - Các sản phẩm không còn nguyên tem niêm phong, tem bảo hành, có hiện tượng bị
-                                    tháo rời để tự ý can thiệp vào kết cấu bên trong của sản phẩm.
-                                </p>
-                                <p>
-                                    - Sử dụng nguồn sạc điện trực tiếp đối với các thiết bị không dây, dẫn tới hỏng
-                                    hóc linh kiện và chức năng sử dụng pin của bàn phím
-                                </p>
-                                <p>
-                                    - Hư hỏng do tác động vật lý của người tiêu dùng như rơi vỡ, va chạm, vào nước,
-                                    ẩm thấp, chập cháy.
-                                </p>
-                                <p>
-                                    - Hư hỏng do thiên tai, động vật, công trùng và do con người gây ra;
-                                </p>
-                                <p>
-                                    - Hiện tượng rỉ sét do yếu tố thời tiết, độ ẩm, thói quen người dùng đều không
-                                    được bảo hành;
-                                </p>
-                                <p>
-                                    - Hết thời hạn bảo hành ghi trên tem;
-                                </p>
-                                <p>
-                                    - Khách hàng tự ý can thiệp vào firmware của sản phẩm.
-                                </p>
-                                <p>
-                                    <strong>C. Các trường hợp khác sẽ được bảo hành theo tiêu chuẩn của nhà sản
-                                        xuất.</strong>
-                                </p>
-                                <p>
-                                    - Cụ thể với bàn phím cơ sẽ được bảo hành các lỗi phát sinh do nhà sản xuất mà
-                                    không phải do người dùng: Hỏng mạch, lỗi màn hình , lỗi cảm ứng , ... .
-                                </p>
-                                <p>
-                                    - Các sản phẩm không sử dụng điện như Keycap, Switch, Keypuller, Swich Puller,
-                                    Lube Station... đều không bảo hành .
-                                </p>
+                            <div class="post__list-des">
+                                Đang cập nhật bài viết
+                            </div>
+                        </div>
+                        .
+                    </div>
+                    <div class="col-xl-9">
+                        <div class="row">
+                            <div class="list__know-heading">
+                                <h1 class="list__know-heading-title">
+                                    KIẾN THỨC & PHẦN MỀM
+                                </h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-10-5">
+                                <div class="list__know-item-">
+                                    <img src="./assets/img/asus.jpg" alt="" class="list__know-item-img">
+                                </div>
+                                <a href="" class="list__know-item-title">Những điều cần làm ngay khi mua Laptop</a
+                                    href="">
+                                <p class="list__know-item-des">Tất tần tật những điều làm tăng hiệu năng máy khi vừa mua
+                                    về giúp hiệu năng làm việc tăng 200%</p>
+                            </div>
+                            <div class="col-xl-10-5">
+                                <div class="list__know-item-">
+                                    <img src="./assets/img/lenovo.png" alt="" class="list__know-item-img">
+                                </div>
+                                <a href="" class="list__know-item-title">Điều gì khiến bạn nên sở hữu 1 chiếc THINKBOOK </a
+                                    href="">
+                                <p class="list__know-item-des">Nhưng thông tin mới nhất khiến THINKBOOK càng khiến bạn muốn sở hữu nó</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-4">
+                                <div class="list__know-item-">
+                                    <img src="./assets/img/card.jpg" alt="" class="list__know-item-img">
+                                </div>
+                                <a href="" class="list__know-item-title">Những điền không thể bỏ qua về card đồ họa</a
+                                    href="">
+                                <p class="list__know-item-des">Bạn cần biết điều này nếu muốn chiếc máy tính trở nên mạnh mẽ hơn</p>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="list__know-item-">
+                                    <img src="./assets/img/card.jpg" alt="" class="list__know-item-img">
+                                </div>
+                                <a href="" class="list__know-item-title">Những điền không thể bỏ qua về card đồ họa</a
+                                    href="">
+                                <p class="list__know-item-des">Bạn cần biết điều này nếu muốn chiếc máy tính trở nên mạnh mẽ hơn</p>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="list__know-item-">
+                                    <img src="./assets/img/card.jpg" alt="" class="list__know-item-img">
+                                </div>
+                                <a href="" class="list__know-item-title">Những điền không thể bỏ qua về card đồ họa</a
+                                    href="">
+                                <p class="list__know-item-des">Bạn cần biết điều này nếu muốn chiếc máy tính trở nên mạnh mẽ hơn</p>
                             </div>
                         </div>
                     </div>
+                    
+                </div>
+                <div class="row">
+                    <ul class="page__num-list">
+                        <li class="page__num page__num--arow-not--active">
+                            <i class="fa-solid fa-angle-left "></i>
+                        </li>
+                        <li class="page__num page__num--active">
+                            <a class="page__num-link" href="">1</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">2</a>
+                        </li>
+                        <li class="page__num">
+                            <a class="page__num-link" href="">3</a>
+                        </li>
+                        <li class=" page__num"><i class="fa-solid fa-angle-right"></i></li>
+                    </ul>
                 </div>
             </div>
         </div>
+
         <footer class="footer">
             <div class="grid">
                 <div class="row">
@@ -344,6 +337,7 @@
 
             </div>
         </footer>
+    </div>
 </body>
 
 </html>
