--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                             <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
                         </li>
                         <li class="header__nav-item">
-                            <a href="" class="header__nav-item-link">Kiến thức & Phần mềm</a>
+                            <a href="knowlegde.html" class="header__nav-item-link">Kiến thức & Phần mềm</a>
                         </li>
                         <li class="header__nav-item">
                             <a href="./policy.html" class="header__nav-item-link">Chính
@@ -260,7 +260,7 @@
                                 <a href="product.html">Sản phẩm</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Kiến thức & Phần mềm</a>
+                                <a href="knowlegde.html">Kiến thức & Phần mềm</a>
                             </li>
                             <li class="footer__list-item">
                                 <a href="policy.html">Chính sách bảo hành</a>
@@ -314,7 +314,7 @@
                                     <a class="footer__nav-item--link" href="product.html">Sản phẩm</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Kiến thức & phần mềm</a>
+                                    <a class="footer__nav-item--link" href="knowlegde.html">Kiến thức & phần mềm</a>
                                 </li>
                                 <li class="footer__nav-item">
                                     <a class="footer__nav-item--link" href="policy.html">Chính sách bảo vệ</a>
