--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
                         </li>
                         <li class="header__nav-item">
-                            <a href="" class="header__nav-item-link">Kiến thức & Phần mềm</a>
+                            <a href="knowlegde.html" class="header__nav-item-link">Kiến thức & Phần mềm</a>
                         </li>
                         <li class="header__nav-item">
                             <a href="policy.html" class="header__nav-item-link">Chính sách bảo hành</a>
@@ -140,7 +140,6 @@
                         </li>
                     </ul>
                 </div>
-
             </div>
         </nav>
         <div class="slider">
@@ -872,16 +871,16 @@
                                 <a href="index.html">Trang chủ</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Sản phẩm</a>
+                                <a href="product.html">Sản phẩm</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Kiến thức & Phần mềm</a>
+                                <a href="knowlegde.html">Kiến thức & Phần mềm</a>
                             </li>
                             <li class="footer__list-item">
                                 <a href="policy.html">Chính sách bảo hành</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Liên hệ</a>
+                                <a href="contact.html">Liên hệ</a>
                             </li>
 
                         </ul>
@@ -923,19 +922,19 @@
                         <div class="col-xl-6">
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Trang Chủ</a>
+                                    <a class="footer__nav-item--link" href="index.html">Trang Chủ</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Sản phẩm</a>
+                                    <a class="footer__nav-item--link" href="product.html">Sản phẩm</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Kiến thức & phần mềm</a>
+                                    <a class="footer__nav-item--link" href="knowlegde.html">Kiến thức & phần mềm</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Chính sách bảo vệ</a>
+                                    <a class="footer__nav-item--link" href="policy.html">Chính sách bảo vệ</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Liên hệ</a>
+                                    <a class="footer__nav-item--link" href="contact.html">Liên hệ</a>
                                 </li>
                             </ul>
                         </div>
