--- a/product.html
+++ b/product.html
@@ -128,7 +128,7 @@
                             <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
                         </li>
                         <li class="header__nav-item">
-                            <a href="" class="header__nav-item-link">Kiến thức & Phần mềm</a>
+                            <a href="knowlegde.html" class="header__nav-item-link">Kiến thức & Phần mềm</a>
                         </li>
                         <li class="header__nav-item">
                             <a href="policy.html" class="header__nav-item-link">Chính sách bảo hành</a>
@@ -1032,7 +1032,7 @@
                                 <a href="product.html">Sản phẩm</a>
                             </li>
                             <li class="footer__list-item">
-                                <a href="">Kiến thức & Phần mềm</a>
+                                <a href="knowlegde.html">Kiến thức & Phần mềm</a>
                             </li>
                             <li class="footer__list-item">
                                 <a href="policy.html">Chính sách bảo hành</a>
@@ -1086,13 +1086,13 @@
                                     <a class="footer__nav-item--link" href="product.html">Sản phẩm</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="">Kiến thức & phần mềm</a>
+                                    <a class="footer__nav-item--link" href="knowlegde.html">Kiến thức & phần mềm</a>
                                 </li>
                                 <li class="footer__nav-item">
                                     <a class="footer__nav-item--link" href="policy.html">Chính sách bảo vệ</a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-item--link" href="index.html">Liên hệ</a>
+                                    <a class="footer__nav-item--link" href="contact.html">Liên hệ</a>
                                 </li>
                             </ul>
                         </div>
